monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4047/A4047g.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A4047;

grammar A4047g {

  D;

  interface A = D?;

  AImpl implements A = D;
}